# myfrs.dbsync

./: README.md  readme.md
dbsync/: CMakeLists.txt  avatar_loop_task.cpp  avatar_loop_task.h  avatar_task.cpp  avatar_task.h  build.sh  db_frsit.cpp  db_frsit.h  dbsync.service  main.cpp  main.h  main_service.cpp  main_service.h  parse_task.cpp  parse_task.h  read_task.cpp  read_task.h  record.h  score_loop_task.cpp  score_loop_task.h  score_task.cpp  score_task.h  sync_task.cpp  sync_task.h
dbsync.install/: dbsync-1.0.0-Linux.deb  install.sh  mycpp-1.0.0-Linux.deb
dbsync.install/odbc.driver/: odbc.ini  odbcinst.ini
